# Alyssa

./: .gitignore  CMakeLists.txt  README.md  main.cpp  makefile  updateLibs.sh
libs/: updateLibs.sh
src/: Alyssa.cpp  main.cpp  main.h
src/Engine/: Application.cpp  Application.h  Core.cpp  Core.h  Material.cpp  Material.h  Model.cpp  Model.h  Util.cpp  Util.h  World.cpp  World.h
src/Game/: Entity.cpp  Entity.h  Game.cpp  Game.h  Level.cpp  Level.h  PlayerCharacter.cpp  PlayerCharacter.h
